# TianEngine

./: .clang-format  CMakeLists.txt  README.md
Application/: Application.cpp  Application.rc  Application.sln  Application.vcxproj
Core/: Atomics.h  Containers.h  Core.vcxproj  Core.vcxproj.filters  CoreTypes.h  GenericPlatformTypes.h  Memory.h  OS.h
Core/Win/: OS_win.h  WinAtomics.inl  WinPlatformTypes.h
Source/Foundation/: CMakeLists.txt  Foundation.h  IncludeAll.cpp
Source/Foundation/Basic/: AllSystemMacros.h  Assert.h  ProcessorUtil.h  RTTI.cpp  RTTI.h  StaticSubSystem.h  Types.h
Source/Foundation/Basic/Compiler/: MSVC.h
Source/Foundation/Basic/Win/: AssertWin.cpp  PlatformWin.h
Source/Foundation/Collection/: EnumerableClass.h
Source/Foundation/Subsystem/: StaticSubSystem.h  SubSystem.h
Source/Foundation/Time/: Time.cpp  Time.h  Time.inl
Source/Foundation/Time/Win/: TimeWin.cpp
